// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPromo list base should render correctly 1`] = `
.c3 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c5 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c2 {
  position: relative;
}

.c4 {
  position: relative;
}

.c6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c1:last-child {
  border: none;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@media (min-width:63rem) {
  .c3 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c5 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c5 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c2 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (max-width:62.9375rem) {
  .c1 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

<ul
  class="c0"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
        >
          <img
            alt="Alt text"
            src="https://foobar.com/image.png"
          />
        </div>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <h3
          class="c6"
        >
          The headline of the promo
        </h3>
        <p
          class="c7"
        >
          The summary of the promo
        </p>
        <time>
          12 March 2019
        </time>
      </div>
    </div>
  </li>
</ul>
`;

exports[`StoryPromo list base should render correctly without border 1`] = `
.c3 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c5 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c2 {
  position: relative;
}

.c4 {
  position: relative;
}

.c6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c1:last-child {
  border: none;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@media (min-width:63rem) {
  .c3 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c5 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c5 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c2 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

<ul
  class="c0"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
        >
          <img
            alt="Alt text"
            src="https://foobar.com/image.png"
          />
        </div>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <h3
          class="c6"
        >
          The headline of the promo
        </h3>
        <p
          class="c7"
        >
          The summary of the promo
        </p>
        <time>
          12 March 2019
        </time>
      </div>
    </div>
  </li>
</ul>
`;

exports[`StoryPromo list should render correctly 1`] = `
.c3 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c5 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c2 {
  position: relative;
}

.c4 {
  position: relative;
}

.c6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c1 {
  padding: 0.5rem 0 1rem;
}

.c1:last-child {
  border: none;
}

.c1:first-child {
  padding-top: 0;
}

.c1:last-child {
  padding-bottom: 0;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@media (min-width:63rem) {
  .c3 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c5 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c5 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c2 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (max-width:62.9375rem) {
  .c1 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c1 {
    padding: 0 0 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1:first-child {
    padding-top: 1rem;
  }
}

<ul
  class="c0"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
        >
          <img
            alt="Alt text"
            src="https://foobar.com/image.png"
          />
        </div>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <h3
          class="c6"
        >
          The headline of the promo
        </h3>
        <p
          class="c7"
        >
          The summary of the promo
        </p>
        <time>
          12 March 2019
        </time>
      </div>
    </div>
  </li>
</ul>
`;

exports[`StoryPromo list should render correctly without border 1`] = `
.c3 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c5 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c2 {
  position: relative;
}

.c4 {
  position: relative;
}

.c6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c1 {
  padding: 0.5rem 0 1rem;
}

.c1:last-child {
  border: none;
}

.c1:first-child {
  padding-top: 0;
}

.c1:last-child {
  padding-bottom: 0;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@media (min-width:63rem) {
  .c3 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c5 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c5 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c2 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c1 {
    padding: 0 0 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1:first-child {
    padding-top: 1rem;
  }
}

<ul
  class="c0"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
        >
          <img
            alt="Alt text"
            src="https://foobar.com/image.png"
          />
        </div>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <h3
          class="c6"
        >
          The headline of the promo
        </h3>
        <p
          class="c7"
        >
          The summary of the promo
        </p>
        <time>
          12 March 2019
        </time>
      </div>
    </div>
  </li>
</ul>
`;
